# configure-test

./: README.md  bootstrap  configure.ac
src/: Makefile.am  book.cpp  book.h  main.cpp
